src/test/deca/syntax/valid/created/parser/Object/New.deca
// Description:
//  Teste new
class test{

}
{
    test a = new test();
}